# mood

./: .gitignore  Cargo.toml  pipewire-resources.md
.cargo/: config.toml
src/: hue.rs  main.rs  settings.rs  tray.rs  utils.rs
src/capture/: linux.rs  mod.rs
