[package]
name = "mood"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
keyring = "3.6.3"
serde = { version = "1.0.228", features = ["derive"] }
dtls = "0.17.1"
fs_extra = "1.3.0"
futures = "0.3.32"
hex = "0.4.3"
image = "0.25.10"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
rustls = "0.23.37"
scap = "0.0.8"
tokio = { version = "1.50.0", features = ["signal"] }
