[package]
name = "mood"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
dotenvy = "0.15.7"
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent", "crypto-rust", "windows-native", "apple-native"] }
serde = { version = "1.0.228", features = ["derive"] }
dtls = "0.17.1"
fs_extra = "1.3.0"
futures = "0.3.32"
hex = "0.4.3"
image = "0.25.10"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
rustls = "0.23.37"
scap = { git = "https://github.com/kiselina2/scap" }
tokio = { version = "1.51.0", features = ["signal"] }
